<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.outsourcify.outsourcify.TemplateActivity"

    android:background="@drawable/gradientbackground"
    >

    <ImageButton
        android:id="@+id/call_skype"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/call_button"
        android:onClick="initiateSkypeUri"/>

    <Button
        android:id="@+id/confirmation_test"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/standard_button"
        android:onClick="testConfirmation"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Rubrik"
            android:textSize="70sp"
            android:id="@+id/textView"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="500dp"
            android:layout_height="100dp"
            android:layout_marginTop="150dp"
            android:layout_centerHorizontal="true"
            android:text="@string/Knapp1"
            android:textSize="32sp"
            android:id="@+id/button1"
            android:onClick="nextView"
            android:clickable="true" />

        <Button
            android:layout_width="500dp"
            android:layout_height="100dp"
            android:layout_below="@+id/button1"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/Knapp2"
            android:textSize="32sp"
            android:id="@+id/button2"
            android:onClick="nextView"
            android:clickable="true" />

        <Button
            android:layout_width="500dp"
            android:layout_height="100dp"
            android:layout_below="@+id/button2"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/Knapp3"
            android:textSize="32sp"
            android:id="@+id/button3"
            android:onClick="nextView"
            android:clickable="true" />

        <Button
            android:layout_width="500dp"
            android:layout_height="100dp"
            android:layout_below="@+id/button3"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/Knapp4"
            android:textSize="32sp"
            android:id="@+id/button4"
            android:onClick="nextView"
            android:clickable="true" />

        <Button
            android:layout_width="500dp"
            android:layout_height="100dp"
            android:layout_below="@+id/button4"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/Knapp5"
            android:textSize="32sp"
            android:id="@+id/button5"
            android:onClick="nextView"
            android:clickable="true" />





        <ImageButton
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/imageBus"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="100dp"
            android:layout_marginLeft="100dp"
            android:onClick="busView"
            android:clickable="true"
            android:src="@drawable/test"

            />

        <ImageButton
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/imageBattery"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:onClick="nextView"
            android:clickable="true"
            android:src="@drawable/batteri3"


            />

</RelativeLayout>
